--- a/style.css
+++ b/style.css
@@ -93,3 +93,12 @@ p {
     background-attachment: scroll;
   }
 }
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: black;
+  color: white;
+  text-align: center;
+}
